Tinkering with ULIRG VO table

--- a/dmu31/dmu31_ULIRGS/2_Make_VO_table.ipynb
+++ b/dmu31/dmu31_ULIRGS/2_Make_VO_table.ipynb
@@ -45,7 +45,7 @@
      "data": {
       "text/html": [
        "<i>Table masked=True length=130</i>\n",
-       "<table id=\"table34913527400\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table34727843656\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Name</th><th>RA</th><th>Dec</th><th>Redshift</th><th>Redshift source</th><th>Lbol/Lsun intrinsic</th><th>Lensed?</th><th>Original survey</th><th>Reference</th><th>Notes</th></tr></thead>\n",
        "<thead><tr><th>str24</th><th>str22</th><th>str13</th><th>str10</th><th>str14</th><th>str11</th><th>str9</th><th>str17</th><th>str106</th><th>str152</th></tr></thead>\n",
        "<tr><td>9io9</td><td>02h09m41.3s</td><td>00d15m58.6s</td><td>2.553</td><td>CO, H-alpha</td><td>1.00E+13</td><td>Y mu~10</td><td>Planck/ACT/VICS82</td><td>http://adsabs.harvard.edu/abs/2015MNRAS.452..502G</td><td>--</td></tr>\n",
@@ -132,6 +132,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "giants.add_column(Column(np.full(len(giants), np.nan, dtype='float64'),\n",
+    "                                   name=\"sfr\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -148,7 +158,12 @@
       "15h41m32.71s\n",
       "235.38629166666664 -35.05647222222222\n",
       "12h37m12s\n",
-      "189.29999999999998 62.37002777777778\n"
+      "189.29999999999998 62.37002777777778\n",
+      "logSFR= will not transform to SFR\n",
+      "logSFR= will not transform to SFR\n",
+      "logSFR= will not transform to SFR\n",
+      "logSFR= will not transform to SFR\n",
+      "logSFR= will not transform to SFR\n"
      ]
     },
     {
@@ -193,6 +208,12 @@
     "    gal['Lensed?'] = gal['Lensed?'].replace('A', '')\n",
     "    gal['Lensed?'] = gal['Lensed?'].replace('/', '')\n",
     "    gal['Lensed?'] = gal['Lensed?'].replace('nlensed', '')\n",
+    "    \n",
+    "    if 'logSFR' in gal['Lbol/Lsun intrinsic']:\n",
+    "        try:\n",
+    "            gal['sfr'] = 10**float(gal['Lbol/Lsun intrinsic'].replace('logSFR=', ''))\n",
+    "        except:\n",
+    "            print('{} will not transform to SFR'.format(gal['Lbol/Lsun intrinsic']))\n",
     "        \n",
     "    "
    ]
@@ -215,14 +236,23 @@
     "    gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('~', '')\n",
     "    gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('>', '')\n",
     "    gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].split('-')[0]\n",
-    "    if 'logSFR' in gal['Lbol/Lsun intrinsic']:\n",
+    "    if 'logFIR~' in gal['Lbol/Lsun intrinsic']:\n",
+    "        gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('logFIR~', '')   \n",
+    "    if 'log' in gal['Lbol/Lsun intrinsic']:\n",
     "        gal['Lbol/Lsun intrinsic'] = '-99'\n",
+    "        #gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('logSFR', '')\n",
+    "        #gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('logFIR', '')\n",
+    "        #gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('=', '')\n",
+    "        #gal['Lbol/Lsun intrinsic'] = gal['Lbol/Lsun intrinsic'].replace('~', '')\n",
     "    elif not (('e' in gal['Lbol/Lsun intrinsic']) \n",
     "            or ('E' in gal['Lbol/Lsun intrinsic'])):\n",
     "        gal['Lbol/Lsun intrinsic'] = str(10** float(gal['Lbol/Lsun intrinsic']) )\n",
     "\n",
+    "\n",
     "giants['Redshift'] = giants['Redshift'].astype(float)\n",
     "giants['Redshift'][giants['Redshift'] < 0] =np.nan\n",
+    "\n",
+    "giants['Lbol/Lsun intrinsic'][giants['Lbol/Lsun intrinsic'] == ''] = '-99'\n",
     "giants['Lbol/Lsun intrinsic'] = giants['Lbol/Lsun intrinsic'].astype(float)\n",
     "giants['Lbol/Lsun intrinsic'][giants['Lbol/Lsun intrinsic'] < 0] =np.nan\n",
     "\n",
@@ -233,7 +263,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for gal in giants['Lbol/Lsun intrinsic'] :\n",
+    "    try:\n",
+    "        test = float(gal)\n",
+    "    except:\n",
+    "        print(gal)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Column name=&apos;Lbol/Lsun intrinsic&apos; dtype=&apos;float64&apos; length=105&gt;\n",
+       "<table>\n",
+       "<tr><td>10000000000000.0</td></tr>\n",
+       "<tr><td>10100000000000.0</td></tr>\n",
+       "<tr><td>10200000000000.0</td></tr>\n",
+       "<tr><td>10600000000000.0</td></tr>\n",
+       "<tr><td>10700000000000.0</td></tr>\n",
+       "<tr><td>10800000000000.0</td></tr>\n",
+       "<tr><td>11000000000000.0</td></tr>\n",
+       "<tr><td>11100000000000.0</td></tr>\n",
+       "<tr><td>11200000000000.0</td></tr>\n",
+       "<tr><td>11300000000000.0</td></tr>\n",
+       "<tr><td>11500000000000.0</td></tr>\n",
+       "<tr><td>11600000000000.0</td></tr>\n",
+       "<tr><td>...</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "<tr><td>nan</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Column name='Lbol/Lsun intrinsic' dtype='float64' length=105>\n",
+       "10000000000000.0\n",
+       "10100000000000.0\n",
+       "10200000000000.0\n",
+       "10600000000000.0\n",
+       "10700000000000.0\n",
+       "10800000000000.0\n",
+       "11000000000000.0\n",
+       "11100000000000.0\n",
+       "11200000000000.0\n",
+       "11300000000000.0\n",
+       "11500000000000.0\n",
+       "11600000000000.0\n",
+       "             ...\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan\n",
+       "             nan"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(giants['Lbol/Lsun intrinsic'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,25 +406,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table34914365056-29440\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>help_id</th><th>hp_idx</th><th>field</th><th>ra</th><th>dec</th><th>redshift</th><th>lbol_intrinsic</th><th>mu_lens</th></tr></thead>\n",
-       "<tr><td>0</td><td>HELP_rare_J020941.300+001558.600</td><td>291882535</td><td>Herschel-Stripe-82</td><td>32.42208333333333</td><td>0.26627777777</td><td>2.553</td><td>10000000000000.0</td><td>10.0</td></tr>\n",
-       "<tr><td>1</td><td>HELP_rare_J132934.180+224327.300</td><td>167978479</td><td></td><td>202.39241666666663</td><td>22.7242499999</td><td>2.0439</td><td>13000000000000.0</td><td>11.0</td></tr>\n",
-       "<tr><td>2</td><td>HELP_rare_J021830.700-053131.000</td><td>289810432</td><td>XMM-LSS</td><td>34.62791666666666</td><td>-5.5252777777</td><td>3.4</td><td>13000000000000.0</td><td>5.0</td></tr>\n",
-       "<tr><td>3</td><td>HELP_rare_J154506.350-344318.200</td><td>700199708</td><td></td><td>236.2764583333333</td><td>-34.721722222</td><td>nan</td><td>10000000000000.0</td><td>nan</td></tr>\n",
-       "<tr><td>4</td><td>HELP_rare_J154132.710-350323.300</td><td>700044386</td><td></td><td>235.38629166666664</td><td>-35.056472222</td><td>3.0</td><td>50118723362727.15</td><td>1.2</td></tr>\n",
-       "<tr><td>5</td><td>HELP_rare_J123712.000+622212.100</td><td>184354581</td><td>HDF-N</td><td>189.29999999999998</td><td>62.3700277777</td><td>4.06</td><td>29000000000000.0</td><td>nan</td></tr>\n",
-       "<tr><td>6</td><td>HELP_rare_J010311.500-453853.902</td><td>579939617</td><td></td><td>15.797917</td><td>-45.648306</td><td>3.0917</td><td>16700000000000.0</td><td>5.34</td></tr>\n",
-       "<tr><td>7</td><td>HELP_rare_J012507.080-472356.000</td><td>574017511</td><td></td><td>21.2795</td><td>-47.398889</td><td>2.5148</td><td>33300000000000.0</td><td>5.47</td></tr>\n",
-       "<tr><td>8</td><td>HELP_rare_J024308.810-462124.300</td><td>553364920</td><td></td><td>40.786708</td><td>-46.35675</td><td>5.699</td><td>16300000000000.0</td><td>5.09</td></tr>\n",
-       "<tr><td>9</td><td>HELP_rare_J030004.370-462124.300</td><td>553435566</td><td></td><td>45.018208</td><td>-46.35675</td><td>3.5954</td><td>12600000000000.0</td><td>6.3</td></tr>\n",
+       "<table id=\"table34728150912-918895\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>help_id</th><th>hp_idx</th><th>field</th><th>ra</th><th>dec</th><th>redshift</th><th>lbol_intrinsic</th><th>mu_lens</th><th>sfr</th></tr></thead>\n",
+       "<tr><td>0</td><td>HELP_rare_J020941.300+001558.600</td><td>291882535</td><td>Herschel-Stripe-82</td><td>32.42208333333333</td><td>0.26627777777</td><td>2.553</td><td>10000000000000.0</td><td>10.0</td><td>nan</td></tr>\n",
+       "<tr><td>1</td><td>HELP_rare_J132934.180+224327.300</td><td>167978479</td><td></td><td>202.39241666666663</td><td>22.7242499999</td><td>2.0439</td><td>13000000000000.0</td><td>11.0</td><td>nan</td></tr>\n",
+       "<tr><td>2</td><td>HELP_rare_J021830.700-053131.000</td><td>289810432</td><td>XMM-LSS</td><td>34.62791666666666</td><td>-5.5252777777</td><td>3.4</td><td>13000000000000.0</td><td>5.0</td><td>nan</td></tr>\n",
+       "<tr><td>3</td><td>HELP_rare_J154506.350-344318.200</td><td>700199708</td><td></td><td>236.2764583333333</td><td>-34.721722222</td><td>nan</td><td>10000000000000.0</td><td>nan</td><td>nan</td></tr>\n",
+       "<tr><td>4</td><td>HELP_rare_J154132.710-350323.300</td><td>700044386</td><td></td><td>235.38629166666664</td><td>-35.056472222</td><td>3.0</td><td>50118723362727.15</td><td>1.2</td><td>nan</td></tr>\n",
+       "<tr><td>5</td><td>HELP_rare_J123712.000+622212.100</td><td>184354581</td><td>HDF-N</td><td>189.29999999999998</td><td>62.3700277777</td><td>4.06</td><td>29000000000000.0</td><td>nan</td><td>nan</td></tr>\n",
+       "<tr><td>6</td><td>HELP_rare_J010311.500-453853.902</td><td>579939617</td><td></td><td>15.797917</td><td>-45.648306</td><td>3.0917</td><td>16700000000000.0</td><td>5.34</td><td>nan</td></tr>\n",
+       "<tr><td>7</td><td>HELP_rare_J012507.080-472356.000</td><td>574017511</td><td></td><td>21.2795</td><td>-47.398889</td><td>2.5148</td><td>33300000000000.0</td><td>5.47</td><td>nan</td></tr>\n",
+       "<tr><td>8</td><td>HELP_rare_J024308.810-462124.300</td><td>553364920</td><td></td><td>40.786708</td><td>-46.35675</td><td>5.699</td><td>16300000000000.0</td><td>5.09</td><td>nan</td></tr>\n",
+       "<tr><td>9</td><td>HELP_rare_J030004.370-462124.300</td><td>553435566</td><td></td><td>45.018208</td><td>-46.35675</td><td>3.5954</td><td>12600000000000.0</td><td>6.3</td><td>nan</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -329,19 +448,19 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table34914365056-29440').dataTable()\");\n",
+       "    console.log(\"$('#table34728150912-918895').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table34914365056-29440').dataTable({\n",
+       "    $('#table34728150912-918895').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
        "        pagingType: \"full_numbers\",\n",
-       "        columnDefs: [{targets: [0, 2, 4, 5, 6, 7, 8], type: \"optionalnum\"}]\n",
+       "        columnDefs: [{targets: [0, 2, 4, 5, 6, 7, 8, 9], type: \"optionalnum\"}]\n",
        "    });\n",
        "});\n",
        "</script>\n"
@@ -350,7 +469,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,12 +482,53 @@
     "        'dec', \n",
     "        'redshift', \n",
     "        'lbol_intrinsic',\n",
-    "        'mu_lens'][:10].show_in_notebook()"
+    "        'mu_lens', \n",
+    "        'sfr'][:10].show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(giants)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(giants['lbol_intrinsic']  == np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,8 +539,16 @@
     "        'dec', \n",
     "        'redshift', \n",
     "        'lbol_intrinsic',\n",
-    "        'mu_lens'].write('./data/rare_objects.csv', overwrite=True)"
+    "        'mu_lens',\n",
+    "        'sfr'].write('./data/rare_objects.csv', overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
