Fix flagging issue on XMM-LSS

--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -1437,7 +1437,9 @@
     "    \n",
     "    flag_merged_column = np.zeros(len(sub_catalogue), dtype=bool)\n",
     "    for column in flag_merged_columns:\n",
-    "        flag_merged_column |= sub_catalogue[column]\n",
+    "        sub_catalogue[column].fill_value = False\n",
+    "        flag_merged_column |= sub_catalogue[column].filled()\n",
+    "   \n",
     "    \n",
     "    sub_catalogue.add_column(Column(data=flag_merged_column, name=\"flag_merged\"))\n",
     "    sub_catalogue.remove_columns(flag_merged_columns)\n",
@@ -1634,7 +1636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
