--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -42,10 +42,10 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE = False\n",
-    "MAKE_FiNAL = True\n",
+    "MAKE_FINAL = True\n",
     "\n",
     "\n",
-    "SUFFIX = '20190207'"
+    "SUFFIX = '20190328'"
    ]
   },
   {
@@ -387,6 +387,144 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "if MAKE_CIGALE:\n",
+    "    \n",
+    "    for tile in file_list:\n",
+    "        \n",
+    "        file_num = tile.split('_')[6].split('.')[0]\n",
+    "        ml = Table.read(tile)\n",
+    "        ml.meta = None\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        #ADD in XID+ merging here\n",
+    "        merged_table = help_merge(ml, xid_mips24)\n",
+    "        merged_table = help_merge(merged_table, xid_pacs)\n",
+    "        merged_table = help_merge(merged_table, xid_spire)\n",
+    "    \n",
+    "        #photo-z merging\n",
+    "        merged_table = help_merge(merged_table, photoz)\n",
+    "        \n",
+    "        #flag merging\n",
+    "        flags = Table.read(\"../../dmu6/dmu6_v_XMM-LSS/data/tiles/xmm-lss_20180504_{}_flags.fits\".format(file_num))\n",
+    "        for col in flags.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                try:\n",
+    "                    merged_table.remove_column(col)\n",
+    "                except KeyError:\n",
+    "                    print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "        merged_table = join(merged_table, flags, join_type='left')\n",
+    "        # Fill values\n",
+    "        for col in merged_table.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                merged_table[col].fill_value = False\n",
+    "        merged_table = merged_table.filled()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "        # Sorting the columns\n",
+    "        bands_tot = [col[2:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "        bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "        bands = list(set(bands_tot) | set(bands_ap))\n",
+    "        bands.sort(key=lambda x: filter_mean_lambda[x])\n",
+    "    \n",
+    "        columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "                   'zspec']\n",
+    "        for band in bands:\n",
+    "            for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
+    "                            'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
+    "                            'flag_{}']:\n",
+    "                colname = col_tpl.format(band)\n",
+    "                if colname in merged_table.colnames:\n",
+    "                    columns.append(colname)\n",
+    "        columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
+    "                    'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
+    "                    'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
+    "    \n",
+    "\n",
+    "        # Check that we did not forget any column\n",
+    "        print( set(columns) - set(merged_table.colnames))\n",
+    "        print(  set(merged_table.colnames) - set(columns) )\n",
+    "    \n",
+    "        merged_table = add_column_meta(merged_table, '../columns.yml')\n",
+    "        merged_table[columns].write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging CIGALE outputs\n",
+    "\n",
+    "We merge the CIGALE outputs to the main catalogue. The CIGALE products provides several χ² with associated thresholds. For simplicity, we convert these two values to flags."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if MAKE_FINAL:\n",
+    "\n",
+    "    # Cigale outputs\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_XMM-LSS/data/zphot/HELP_final_results.fits\")\n",
+    "    cigale['id'].name = \"help_id\"\n",
+    "\n",
+    "    # We convert the various Chi2 and threshold to flags\n",
+    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    flag_cigale = (\n",
+    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "        flag_cigale_opt & flag_cigale_ir)\n",
+    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "\n",
+    "    cigale.add_columns([\n",
+    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "                     dtype=int, fill_value=-1),\n",
+    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "                     dtype=int, fill_value=-1),\n",
+    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "                     dtype=int, fill_value=-1),\n",
+    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "                     dtype=int, fill_value=-1)\n",
+    "    ])\n",
+    "\n",
+    "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
+    "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
+    "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
+    "    cigale['UVoptIR_bayes.sfh.sfr10Myrs_err'].name = \"cigale_sfr_err\"\n",
+    "    cigale['UVoptIR_bayes.dust.luminosity'].name = \"cigale_dustlumin\"\n",
+    "    cigale['UVoptIR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_err\"\n",
+    "    cigale['IR_bayes.dust.luminosity'].name = \"cigale_dustlumin_ironly\"\n",
+    "    cigale['IR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_ironly_err\"\n",
+    "\n",
+    "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
+    "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
+    "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
+    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
+    "                    'flag_cigale_ironly']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1886,144 +2024,6 @@
     }
    ],
    "source": [
-    "if MAKE_CIGALE:\n",
-    "    \n",
-    "    for tile in file_list:\n",
-    "        \n",
-    "        file_num = tile.split('_')[6].split('.')[0]\n",
-    "        ml = Table.read(tile)\n",
-    "        ml.meta = None\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        #ADD in XID+ merging here\n",
-    "        merged_table = help_merge(ml, xid_mips24)\n",
-    "        merged_table = help_merge(merged_table, xid_pacs)\n",
-    "        merged_table = help_merge(merged_table, xid_spire)\n",
-    "    \n",
-    "        #photo-z merging\n",
-    "        merged_table = help_merge(merged_table, photoz)\n",
-    "        \n",
-    "        #flag merging\n",
-    "        flags = Table.read(\"../../dmu6/dmu6_v_XMM-LSS/data/tiles/xmm-lss_20180504_{}_flags.fits\".format(file_num))\n",
-    "        for col in flags.colnames:\n",
-    "            if 'flag' in col:\n",
-    "                try:\n",
-    "                    merged_table.remove_column(col)\n",
-    "                except KeyError:\n",
-    "                    print(\"Column: {} not in masterlist.\".format(col))\n",
-    "        \n",
-    "        merged_table = join(merged_table, flags, join_type='left')\n",
-    "        # Fill values\n",
-    "        for col in merged_table.colnames:\n",
-    "            if 'flag' in col:\n",
-    "                merged_table[col].fill_value = False\n",
-    "        merged_table = merged_table.filled()\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "        # Sorting the columns\n",
-    "        bands_tot = [col[2:] for col in merged_table.colnames\n",
-    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
-    "        bands_ap = [col[5:] for col in merged_table.colnames\n",
-    "             if col.startswith('f_ap_') ]\n",
-    "        bands = list(set(bands_tot) | set(bands_ap))\n",
-    "        bands.sort(key=lambda x: filter_mean_lambda[x])\n",
-    "    \n",
-    "        columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
-    "                   'zspec']\n",
-    "        for band in bands:\n",
-    "            for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
-    "                            'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
-    "                            'flag_{}']:\n",
-    "                colname = col_tpl.format(band)\n",
-    "                if colname in merged_table.colnames:\n",
-    "                    columns.append(colname)\n",
-    "        columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
-    "                    'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
-    "                    'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
-    "    \n",
-    "\n",
-    "        # Check that we did not forget any column\n",
-    "        print( set(columns) - set(merged_table.colnames))\n",
-    "        print(  set(merged_table.colnames) - set(columns) )\n",
-    "    \n",
-    "        merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "        merged_table[columns].write(\"data/tiles/xmm-lss_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merging CIGALE outputs\n",
-    "\n",
-    "We merge the CIGALE outputs to the main catalogue. The CIGALE products provides several χ² with associated thresholds. For simplicity, we convert these two values to flags."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if MAKE_FINAL:\n",
-    "\n",
-    "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_XMM-LSS/data/zphot/HELP_final_results.fits\")\n",
-    "    cigale['id'].name = \"help_id\"\n",
-    "\n",
-    "    # We convert the various Chi2 and threshold to flags\n",
-    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
-    "    flag_cigale = (\n",
-    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
-    "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
-    "\n",
-    "    cigale.add_columns([\n",
-    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
-    "                     dtype=int, fill_value=-1)\n",
-    "    ])\n",
-    "\n",
-    "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
-    "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
-    "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
-    "    cigale['UVoptIR_bayes.sfh.sfr10Myrs_err'].name = \"cigale_sfr_err\"\n",
-    "    cigale['UVoptIR_bayes.dust.luminosity'].name = \"cigale_dustlumin\"\n",
-    "    cigale['UVoptIR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_err\"\n",
-    "    cigale['IR_bayes.dust.luminosity'].name = \"cigale_dustlumin_ironly\"\n",
-    "    cigale['IR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_ironly_err\"\n",
-    "\n",
-    "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
-    "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
-    "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                    'flag_cigale_ironly']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if MAKE_FINAL:\n",
     "\n",
     "    for tile in file_list:\n",
@@ -2122,7 +2122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
