--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -81,7 +81,7 @@
     "['SSDF',               '20180221' ],\n",
     "['xFLS',               '20180501' ],\n",
     "['XMM-13hr',           '20180501' ],\n",
-    "['XMM-LSS',            '20180504' ]]"
+    "['XMM-LSS',            '20190328' ]]"
    ]
   },
   {
@@ -298,6 +298,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -313,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
