Full COSMOS rerun to CIGALE inputs

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Master list\n",
-    "SUFFIX='20181106'\n",
+    "SUFFIX='20190402'\n",
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
@@ -232,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -639,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
