Making all the optnir CIGALE inputs

--- a/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -262,6 +262,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# All optnir objects with photo-z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = master_catalogue[optnir].copy()\n",
+    "best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "print(\"Number of optnir sources with z-phot: {}\".format(len(best_catalogue)))\n",
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "# Convertion to CIGALE format\n",
+    "os.environ['LOG_LEVEL'] = 'INFO'\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)\n",
+    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Catalogue using spectroscopic redshift"
    ]
   },
@@ -406,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
