--- a/dmu28/dmu28_EGS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_EGS/CIGALE_catalogue_preparation.ipynb
@@ -402,6 +402,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
@@ -417,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
