--- a/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
@@ -215,13 +215,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Catalogue using spectroscopic redshift"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -2517,6 +2510,118 @@
     "    \n",
     "cigale_input.write(\"data_tmp/xmm-lss_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All optnir objects with photo-z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cigale_input = Table()\n",
+    "\n",
+    "for tile in file_list:\n",
+    "    \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    print(\"Tile {}:\".format(tile.split('/')[-1]))\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "    \n",
+    "    best_catalogue = main_help_sample(best_catalogue)\n",
+    "        optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
+    "    \n",
+    "    best_catalogue = best_catalogue[optnir]\n",
+    "\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "\n",
+    "    print(\"Number of sources with redshift in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "    remove_unneeded_fluxes(j_bands)\n",
+    "    remove_unneeded_fluxes(h_bands)\n",
+    "    remove_unneeded_fluxes(k_bands)\n",
+    "\n",
+    "    cigale_input = vstack([cigale_input, best_catalogue])\n",
+    "    #best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_best_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    \n",
+    "    \n",
+    "cigale_input.write(\"data_tmp/xmm-lss_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Catalogue using spectroscopic redshift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cigale_input = Table()\n",
+    "\n",
+    "for tile in file_list:\n",
+    "    \n",
+    "    file_num = tile.split('_')[4].split('.')[0]\n",
+    "    print(\"Tile {}:\".format(tile.split('/')[-1]))\n",
+    "    best_catalogue = Table.read(tile)\n",
+    "    best_catalogue = main_help_sample(best_catalogue)\n",
+    "    \n",
+    "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
+    "    \n",
+    "    best_catalogue = best_catalogue[optnir]\n",
+    "\n",
+    "    best_catalogue.remove_column(\"redshift\")\n",
+    "    best_catalogue[\"zspec\"].name = \"redshift\"\n",
+    "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
+    "\n",
+    "    print(\"Number of sources with redshift in file {}: {}\".format(file_num, len(best_catalogue)))\n",
+    "\n",
+    "    # Correction for galactic extinction\n",
+    "    best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n",
+    "\n",
+    "    # Convertion to CIGALE format\n",
+    "\n",
+    "    best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)\n",
+    "\n",
+    "    remove_unneeded_fluxes(g_bands)\n",
+    "    remove_unneeded_fluxes(u_bands)\n",
+    "    remove_unneeded_fluxes(r_bands)\n",
+    "    remove_unneeded_fluxes(i_bands)\n",
+    "    remove_unneeded_fluxes(z_bands)\n",
+    "    remove_unneeded_fluxes(y_bands)\n",
+    "    remove_unneeded_fluxes(j_bands)\n",
+    "    remove_unneeded_fluxes(h_bands)\n",
+    "    remove_unneeded_fluxes(k_bands)\n",
+    "\n",
+    "    cigale_input = vstack([cigale_input, best_catalogue])\n",
+    "    #best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_best_extcor_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)\n",
+    "    \n",
+    "    \n",
+    "cigale_input.write(\"data_tmp/xmm-lss_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+   ]
   }
  ],
  "metadata": {
@@ -2535,7 +2640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
